# story

./: .gitignore  docker-compose.yml  package-lock.json  package.json
convex/: audioChunks.ts  books.ts  schema.ts  transcriptions.ts  voices.ts
data/: blyton-secret-of-moon-castle.epub  stapledon-flames.epub  the-tale-of-peter-rabbit.epub  white-witch-in-the-wood.epub
story-backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
story-backend/src/story_backend/: app.py  config.py  db.py  extract.py  narration.py  transcription.py  voices.py
story-backend/tests/: test_extract.py
story-frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
story-frontend/src/: App.tsx  index.css  main.tsx
story-frontend/src/components/layout/: app-shell.tsx  audio-player-bar.tsx  header.tsx
story-frontend/src/components/reader/: chapter-content.tsx  chapter-sidebar.tsx  epub-viewer.tsx  narrate-button.tsx  pdf-viewer.tsx
story-frontend/src/components/voices/: clone-voice-dialog.tsx  voice-list.tsx
story-frontend/src/hooks/: use-audio-recorder.ts  use-books.ts  use-narration.ts  use-voices.ts
story-frontend/src/lib/: alignment.ts  api.ts  types.ts
story-frontend/src/pages/: book-reader.tsx  library.tsx  voice-manager.tsx
story-frontend/src/stores/: audio-store.ts
